# FeroxRipper

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: args.rs  banner.rs  cracker.rs  detect.rs  lib.rs  main.rs
tests/: detect_tests.rs
wordlist/: special.txt  wordlist.txt
