[package]
name = "feroxripper"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
hex = "0.4.3"
ntlm-hash = "0.1.0"
regex = "1.11.1"
md5 = "0.7"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
whirlpool = "0.10"

[lib]
name = "feroxripper"
path = "src/lib.rs"
